--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "nanoid": "^4.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
+    "react-avatar": "^5.0.3",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.5.0",
