--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.1.0",
     "react-avatar": "^5.0.3",
     "react-dom": "^18.1.0",
+    "react-notifications": "^1.7.4",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.5.0",
     "react-scripts": "5.0.1",
